fix: overflow height on dashboard pages

--- a/src/app/dashboard/dashboard.css
+++ b/src/app/dashboard/dashboard.css
@@ -3,8 +3,8 @@ html {
     background-color: white;
 }
 
-body,
+/* body,
 .particle-connect-ui,
 .particle-connect-ui > div {
     height: 100%;
-}
+} */
